# ValeDesk

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CURSOR.md  FEATURES.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  SECURITY.md  c4.json  electron-builder.json  index.html  issue-ts-fix.md  package-lock.json  package.json  playwright.config.ts  proxy-logger.js  tsconfig.app.json  types.d.ts  vite.config.ts  vitest.config.ts
.claude/rules/: architecture.md  auto-skill-bootstrap.mdc  development.md
.cursor/rules/: architecture.md  development.md  llm-loop.md  system-prompt.md  tools.md
.cursor/skills/: skills-manifest.json
.cursor/skills/agent-git-workflow/: SKILL.md
.cursor/skills/auto-skill-bootstrap/: SKILL.md  candidates.json  capabilities.json  state.json  trust-policy.json
.github/workflows/: release.yml
dev/: E2E_SETUP.md  REVIEW_MINI_WORKFLOW.md  SPEC_MINI_WORKFLOW.md  distil-promts.md
e2e/: app.spec.ts
locales/: en.json  ru.json
playwright-report/: index.html
scripts/: build-sidecar.cjs  build_asr_sidecar.sh  build_sidecar.cjs  build_sidecar.ps1  build_sidecar.sh  dev-electron-delayed.cjs  dev-tauri.cjs  ensure_deps.ps1  ensure_deps.sh  ensure_node_deps.ps1  ensure_rust.ps1  ensure_tauri_cli.ps1  screenshot-5173.mjs  setup_sidecar_mock.ps1  setup_sidecar_mock.sh
sidecars/asr-swift/: .gitignore  Package.resolved  Package.swift  README.md
src-tauri/: Cargo.toml  Info.plist  build.rs  migrate.md  model_manifest.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_dictation.rs  audio_models.rs  db.rs  main.rs  sandbox.rs  scheduler.rs
src/agent/: ipc-handlers.ts  main.ts  pathResolver.ts  pdf-parse.d.ts  preload.cts  types.ts
src/electron/: build-info.json  ipc-handlers.ts  main.ts  session-manager.ts  types.ts  util.ts
src/shared/: mini-workflow-types.ts
src/sidecar/: main.ts  protocol.ts  session-store-memory.ts  tsconfig.json
src/ui/: App.tsx  index.css  main.tsx  role-group.ts  tauri-plugins.d.ts  types.ts
tests/: app-locale.spec.tsx  bash-tool-ffmpeg.spec.ts  copy-locales.spec.ts  diff-viewer-modal.spec.tsx  duckduckgo-search-tool.spec.ts  ffmpeg-downloader.spec.ts  ffmpeg-remove.spec.ts  file-browser.spec.tsx  first-launch-modals.spec.tsx  generate-session-title.spec.ts  i18n-I18nProvider.spec.tsx  i18n-localeUtils.spec.ts  i18n-miniapp-keys.spec.ts  locales-consistency.spec.ts  memory-tool.spec.ts  mini-workflow.spec.ts  miniapp-ui-fixes.spec.ts  resolve-model.spec.ts  runner-openai.spec.ts  session-store.spec.ts  settings-modal-language.spec.tsx  setup.ts  skills-loader.spec.ts  skills-store.spec.ts  skills-tool.spec.ts  test-utils.tsx  useAppStore.spec.ts
(+86 files in other folders)
